[gd_scene load_steps=8 format=3 uid="uid://bpnbqv1fkfxwy"]

[ext_resource type="Script" path="res://scripts/ui/settings_screen.gd" id="1_gfto1"]
[ext_resource type="FontFile" uid="uid://c685qb4m7qjc" path="res://fonts/rubik.ttf" id="1_hmc66"]
[ext_resource type="Texture2D" uid="uid://vfgrp5seiq7s" path="res://sprites/ui/dialogue_nine_patch.png" id="1_u57oc"]
[ext_resource type="FontFile" uid="uid://sxhpegxwj6qy" path="res://fonts/verdana.ttf" id="3_g47t5"]
[ext_resource type="Theme" uid="uid://cou1oxt1vsf13" path="res://theming/hover_ui.tres" id="5_ofg2w"]
[ext_resource type="PackedScene" uid="uid://bmpyaq5wnv6el" path="res://scenes/ui/settings/slider_setting.tscn" id="6_3amwi"]

[sub_resource type="LabelSettings" id="LabelSettings_amg5c"]
line_spacing = 0.0
font = ExtResource("3_g47t5")
font_size = 32

[node name="SettingsScreen" type="Node2D" node_paths=PackedStringArray("music_slider", "sfx_slider")]
script = ExtResource("1_gfto1")
music_slider = NodePath("PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/MusicVolSetting/HSlider")
sfx_slider = NodePath("PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/SfxVolSetting/HSlider")

[node name="PixelCanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="SettingsWindow" type="ScrollContainer" parent="PixelCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -871.0
offset_top = -483.0
offset_right = -89.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="NinePatchRect" type="NinePatchRect" parent="PixelCanvasLayer/SettingsWindow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_u57oc")
region_rect = Rect2(0, 0, 39, 39)
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13

[node name="VBoxContainer" type="VBoxContainer" parent="PixelCanvasLayer/SettingsWindow/NinePatchRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 762.0
offset_bottom = 405.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CategoryLabel" type="Label" parent="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_stretch_ratio = 1.21
theme_override_fonts/font = ExtResource("1_hmc66")
theme_override_font_sizes/font_size = 75
text = "Settings"
label_settings = SubResource("LabelSettings_amg5c")
vertical_alignment = 1

[node name="MusicVolSetting" parent="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer" instance=ExtResource("6_3amwi")]
layout_mode = 2

[node name="Label" parent="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/MusicVolSetting/OptionPanel" index="0"]
text = "Music Volume"

[node name="HSlider" parent="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/MusicVolSetting" index="1"]
max_value = 1.0
step = 0.0

[node name="SfxVolSetting" parent="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer" instance=ExtResource("6_3amwi")]
layout_mode = 2

[node name="Label" parent="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/SfxVolSetting/OptionPanel" index="0"]
text = "Sound Effects Volume"

[node name="HSlider" parent="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/SfxVolSetting" index="1"]
max_value = 1.0
step = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Buttons" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 557.0
offset_bottom = 0.000244141
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Buttons"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="BackButton" type="Button" parent="CanvasLayer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("5_ofg2w")
text = "Back to Game"

[node name="ResetButton" type="Button" parent="CanvasLayer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("5_ofg2w")
text = "Reset Defaults"

[connection signal="value_changed" from="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/MusicVolSetting/HSlider" to="." method="set_music_vol"]
[connection signal="value_changed" from="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/SfxVolSetting/HSlider" to="." method="set_sfx_vol"]
[connection signal="pressed" from="CanvasLayer/Buttons/HBoxContainer/BackButton" to="." method="back_to_title"]

[editable path="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/MusicVolSetting"]
[editable path="PixelCanvasLayer/SettingsWindow/NinePatchRect/VBoxContainer/SfxVolSetting"]
